# IRobotCreateControl

./: .gitignore
CAD/: 00_sheets.DWG  00_sheets.DXF  01_sheets.DWG  01_sheets.DXF  02_sheets.DWG  02_sheets.DXF  03_sheets.DXF  Bottom.SLDPRT  Standoffs.SLDPRT  cover.SLDPRT  covercheck.SLDASM  sheets.DWG  sheets.SLDDRW
CreateControl/: CreateControl.sln
CreateControl/CreateControl/: AnalyzeCharicterizations.py  CreateCharicterization.py  CreateControl.py  CreateControl.pyproj  CreateController.py  CreateInterface.py  CreateInterface.py~  CreateModel.py  CreateStateEstimator.py  OpenLoop.csv  OpenLoopRun4.xlsx  Run.csv  Run2.csv  Run3.csv  Simulator.py  TrajectoryTests.py  open_sim_1.xlsx  plotRun.py  read-log-2-csv.py  second order.xlsx  stop.py
CreateControl/CreateControl/vicon/: __init__.py  body_deprecated_t.py  body_t.py  marker_t.py  model_t.py  segment_t.py  vicon_t.py  xyz_t.py
CreateControl/Media/: Cardiod-rc300.00-spacing5.00-rcut127.00-trajs-0.npy  card2-dist5.20-rcut130.00-trajs-0.npy  card3-dist5.20-rcut130.00-trajs-0.npy  card4-dist5.20-rcut130.00-trajs-0.npy
RefrenceCode/: ViconReader.py
RefrenceCode/create_cntl/: CMakeLists.txt  mainpage.dox  manifest.xml
RefrenceCode/matlab_protocol/: CMakeLists.txt  mainpage.dox  manifest.xml
RefrenceCode/matlab_protocol/include/: matlab_protocol.h  matlab_protocol_sgil.h
RefrenceCode/matlab_protocol/launch/: matlab_protocol.launch
RefrenceCode/matlab_protocol/src/: matlab_protocol.cpp  matlab_protocol_callback.cpp  matlab_protocol_callback_sgil.cpp  matlab_protocol_init.cpp  matlab_protocol_init_sgil.cpp  matlab_protocol_sgil.cpp
(+10 files in other folders)
